--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "request": "^2.75.0",
     "sqlite3": "^3.1.6"
