Added starter-jdbc to pom. Organized properties and added datasource poperties for h2. Created new database file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
+# Spring properties
 server.port= 8080
-spring.thymeleaf.cache: false
+spring.thymeleaf.cache= false
+
+#H2 properties
+spring.datasource.url = jdbc:h2:./data/games;DB_CLOSE_ON_EXIT=FALSE
 spring.h2.console.enabled= true
 spring.h2.console.path= /h2
+spring.datasource.username = scrape
+spring.datasource.password = scrape
+spring.datasource.driverClassName = org.h2.Driver
