Entities set up. Build is failing.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ server.port= 8080
 spring.thymeleaf.cache= false
 
 #H2 properties
-spring.datasource.url = jdbc:h2:./data/games;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.url = jdbc:h2:file:./data/games;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username = scraper
+spring.datasource.password = scraper
 spring.h2.console.enabled= true
 spring.h2.console.path= /h2
-spring.datasource.username = scrape
-spring.datasource.password = scrape
-spring.datasource.driverClassName = org.h2.Driver
+
