--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Spring properties
-server.port= 8080
-spring.thymeleaf.cache= false
+server.port=8080
+spring.thymeleaf.cache=false
 
 #H2 properties
-spring.datasource.driverClassName = org.h2.Driver
-spring.datasource.url = jdbc:h2:file:./data/games;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username = scraper
-spring.datasource.password = scraper
-spring.h2.console.enabled= true
-spring.h2.console.path= /h2
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:./data/games;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=scraper
+spring.datasource.password=scraper
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
