H2 connects successfully. Logging games correctly. Everything runs as expected at this point. Moving on to populating DB.

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,8 +1,8 @@
 appender.console.type=Console
 appender.console.name=STDOUT
 appender.console.layout.type=PatternLayout
-appender.console.layout.pattern=%green{[%-5level] %d{yyyy-MM-dd HH:mmm:ss.SSS}} %blue{%c{2}:%n} %cyan{%m%n}
+appender.console.layout.pattern=%green{[%-5p] %d{yyyy-MM-dd HH:mmm:ss.SSS}} %blue{%c{2}:%n} %cyan{%m%n}
 
-rootLogger.level=debug
+rootLogger.level=info
 rootLogger.appenderRefs=stdout
 rootLogger.appenderRef.stdout.ref=STDOUT
