Game table is populated. Still working on JPA relations and populating the remaining tables.

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -3,6 +3,6 @@ appender.console.name=STDOUT
 appender.console.layout.type=PatternLayout
 appender.console.layout.pattern=%green{[%-5p] %d{yyyy-MM-dd HH:mmm:ss.SSS}} %blue{%c{2}:%n} %cyan{%m%n}
 
-rootLogger.level=info
+rootLogger.level=debug
 rootLogger.appenderRefs=stdout
 rootLogger.appenderRef.stdout.ref=STDOUT
