--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # Spring properties
-server.port=8080
-spring.thymeleaf.cache=false
-
-#H2 properties
-spring.datasource.username=scrape
-spring.datasource.password=scrape
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./src/main/resources/data/games;DB_CLOSE_ON_EXIT=FALSE
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-
-
-
+server.port = 8080
+spring.thymeleaf.cache = false
+# H2 properties
+spring.datasource.username = scrape
+spring.datasource.password = scrape
+spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.url = jdbc:h2:file:./src/main/resources/data/games;DB_CLOSE_ON_EXIT=FALSE
+spring.h2.console.enabled = true
+spring.h2.console.path = /h2
+# JPA properties
+spring.jpa.show-sql = true
+# Hibernate properties
+#spring.jpa.hibernate.ddl-auto = update
