Re-populated game table with 500 rows.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.h2.console.path = /h2
 # JPA properties
 spring.jpa.show-sql = true
 # Hibernate properties
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
