--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.h2.console.path = /h2
 spring.jpa.show-sql = true
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto = update
+# create-drop
+# update
