--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 # Spring properties
 server.port = 8080
 spring.thymeleaf.cache = false
+spring.main.banner-mode= off
 
 # H2 properties
 spring.datasource.username = scrape
 spring.datasource.password = scrape
-spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.driver-class-name = org.h2.Driver
 spring.datasource.url = jdbc:h2:file:./src/main/resources/data/games;DB_CLOSE_ON_EXIT=FALSE
 spring.h2.console.enabled = true
 spring.h2.console.path = /h2
@@ -16,3 +17,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 # create-drop
 # update
+
+# Spring Developer Tools properties
+spring.devtools.restart.enabled = false
+spring.devtools.restart.exclude = resources/**,static/**,public/**,templates/**,**/*Test.class
