Changed date format in games csv.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.jpa.hibernate.ddl-auto = update
 # update
 
 # Spring Developer Tools properties
-#spring.devtools.restart.enabled = false
-#spring.devtools.restart.exclude = resources/**,static/**,public/**,templates/**,**/*Test.class
+spring.devtools.restart.enabled = false
+spring.devtools.restart.exclude = resources/**,static/**,public/**,templates/**,**/*Test.class
