--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.h2.console.path = /h2
 # JPA properties
 spring.jpa.show-sql = true
 # Hibernate properties
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 # create-drop
 # update
 
